--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,11 @@
-<ul>
+
+    <h1>Save any kind of movies</h1>
+
+    <h3 >My Lists</h3>
+    <%= link_to "Create a movie list", new_list_path, class: "btn btn-flat" %>
+
   <% @lists.each do |list| %>
-    <li><%= link_to list.name, list_path(list) %></li>
-  <% end %>
-</ul>
+      <%= link_to list_path(list) do %>
+      <%= list.name %>
+      <% end %>
+    <% end %>
