--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -4,7 +4,7 @@
     <h1>Add a new Bookmark</h1>
     <%= simple_form_for [@list, @bookmark] do |f| %>
      <%= f.input :comment, placeholder: 'leave a comment about the movie' %>
-     <%= f.association :movie, prompt: 'Select a movie', input_html: { data: { controller: 'select2' } %>
+     <%= f.association :movie, prompt: 'Select a movie', input_html: { data:{ controller: 'select2' }}%>
       <%= f.submit class: 'btn btn-primary' %>
     <% end %>
   </div>
